Fixed alert close alignment

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -178,12 +178,12 @@ $xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max
 $xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})";
 $xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})";
 
-    //Legacy
+// Legacy
 $small: $medium-up;
 $medium: $medium-up;
 $large: $large-up;
 
-    //We use this as cursors values for enabling the option of having custom cursors in the whole site's stylesheet
+// We use this as cursors values for enabling the option of having custom cursors in the whole site's stylesheet
 $cursor-crosshair-value: crosshair;
 $cursor-default-value: default;
 $cursor-disabled-value: not-allowed;
@@ -335,38 +335,38 @@ $header-font-weight: $font-weight-medium;
 
  $include-html-alert-classes: $include-html-classes;
 
-    //We use this to control alert padding.
-$alert-padding-top: rem-calc(14);
-$alert-padding-default-float: $alert-padding-top;
-$alert-padding-opposite-direction: $alert-padding-top + rem-calc(10);
-$alert-padding-bottom: $alert-padding-top;
+// We use this to control alert padding.
+// $alert-padding-top: rem-calc(14);
+// $alert-padding-default-float: $alert-padding-top;
+// $alert-padding-opposite-direction: $alert-padding-top + rem-calc(10);
+// $alert-padding-bottom: $alert-padding-top;
 
-    //We use these to control text style.
-$alert-font-weight: $font-weight-normal;
+// We use these to control text style.
+$alert-font-weight: $font-weight-medium;
 $alert-font-size: rem-calc(13);
 $alert-font-color: $white;
 $alert-font-color-alt: scale-color($secondary-color, $lightness: -66%);
 
-    //We use this for close hover effect.
+// We use this for close hover effect.
 $alert-function-factor: -14%;
 
-    //We use these to control border styles.
+// We use these to control border styles.
 $alert-border-style: solid;
 $alert-border-width: 1px;
 $alert-border-color: scale-color($primary-color, $lightness: $alert-function-factor);
 $alert-bottom-margin: rem-calc(20);
 
-    //We use these to style the close buttons
-$alert-close-color: $oil;
-$alert-close-top: 50%;
-$alert-close-position: rem-calc(4);
-$alert-close-font-size: rem-calc(22);
-$alert-close-opacity: 0.3;
-$alert-close-opacity-hover: 0.5;
-$alert-close-padding: 9px 6px 4px;
-$alert-close-background: inherit;
+// We use these to style the close buttons
+// $alert-close-color: $oil;
+// $alert-close-top: 50%;
+// $alert-close-position: rem-calc(4);
+// $alert-close-font-size: rem-calc(22);
+// $alert-close-opacity: 0.3;
+// $alert-close-opacity-hover: 0.5;
+// $alert-close-padding: 9px 6px 4px;
+// $alert-close-background: inherit;
 
-    //We use this to control border radius
+// We use this to control border radius
 $alert-radius: $global-radius;
 
 $alert-transition-speed: 300ms;
